Assets/Plugins/wrnchAI/bin/wrnch.framework/Headers/poseParams.h

    typedef struct wrIKParams* wrIKParamsHandle;
    typedef const struct wrIKParams* wrIKParamsHandleConst;
    WRNCH_DLL_INTERFACE wrIKParamsHandle wrIKParams_Create(void);
    WRNCH_DLL_INTERFACE void wrIKParams_Destroy(wrIKParamsHandle);
    WRNCH_DLL_INTERFACE void wrIKParams_SetTransReach(wrIKParamsHandle, float transReach);
    WRNCH_DLL_INTERFACE void wrIKParams_SetRotReach(wrIKParamsHandle, float rotReach);
    WRNCH_DLL_INTERFACE void wrIKParams_SetPull(wrIKParamsHandle, float pull);
    WRNCH_DLL_INTERFACE void wrIKParams_SetResist(wrIKParamsHandle, float resist);
    WRNCH_DLL_INTERFACE void wrIKParams_SetMaxAngularVelocity(wrIKParamsHandle,
                                                              float maxAngularVelocity);
    WRNCH_DLL_INTERFACE void wrIKParams_SetFPS(wrIKParamsHandle, float fps);
    WRNCH_DLL_INTERFACE void wrIKParams_SetJointVisibilityThresh(wrIKParamsHandle, float thresh);
    WRNCH_DLL_INTERFACE float wrIKParams_GetTransReach(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetRotReach(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetPull(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetResist(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetMaxAngularVelocity(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetFPS(wrIKParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrIKParams_GetJointVisibilityThresh(wrIKParamsHandleConst);