Assets/Plugins/wrnchAI/APIs/wrAPI/PoseParams.cs


        [DllImport(Glob.DLLName)]
        private static extern IntPtr wrIKParams_Create();
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_Destroy(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetTransReach(IntPtr nativeHandle, float transReach);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetRotReach(IntPtr nativeHandle, float rotReach);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetPull(IntPtr nativeHandle, float pull);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetResist(IntPtr nativeHandle, float resist);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetMaxAngularVelocity(IntPtr nativeHandle, float maxAngularVelocity);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetFPS(IntPtr nativeHandle, float fps);
        [DllImport(Glob.DLLName)]
        private static extern void wrIKParams_SetJointVisibilityThresh(IntPtr nativeHandle, float thresh);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetTransReach(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetRotReach(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetPull(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetResist(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetMaxAngularVelocity(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetFPS(IntPtr nativeHandle);
        [DllImport(Glob.DLLName)]
        private static extern float wrIKParams_GetJointVisibilityThresh(IntPtr nativeHandle);

        public IKParams()
        {
            m_nativeHandle = wrIKParams_Create();
        }

        ~IKParams()
        {
            if (m_nativeHandle != IntPtr.Zero)
            {
                wrIKParams_Destroy(m_nativeHandle);
            }
        }

        public IKParams SetTransReach(float transReach)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetTransReach(m_nativeHandle, transReach);
            return this;
        }

        public IKParams SetRotReach(float rotReach)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetRotReach(m_nativeHandle, rotReach);
            return this;
        }

        public IKParams SetPull(float pull)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetRotReach(m_nativeHandle, pull);
            return this;
        }

        public IKParams SetResist(float resist)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetRotReach(m_nativeHandle, resist);
            return this;
        }

        public IKParams SetMaxAngularVelocity(float maxAngularVelocity)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetMaxAngularVelocity(m_nativeHandle, maxAngularVelocity);
            return this;
        }

        public IKParams SetFPS(float fps)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetFPS(m_nativeHandle, fps);
            return this;
        }

        public IKParams SetJointVisibilityThresh(float thresh)
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return null;
            }
            wrIKParams_SetJointVisibilityThresh(m_nativeHandle, thresh);
            return this;
        }

        public float GetTransReach()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetTransReach(m_nativeHandle);
        }

        public float GetRotReach()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetRotReach(m_nativeHandle);
        }

        public float GetPull()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetPull(m_nativeHandle);
        }

        public float GetResist()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetResist(m_nativeHandle);
        }

        public float GetMaxAngularVelocity()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetMaxAngularVelocity(m_nativeHandle);
        }

        public float GetFPS()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetFPS(m_nativeHandle);
        }

        public float GetJointVisibilityThresh()
        {
            if (m_nativeHandle == IntPtr.Zero)
            {
                Debug.LogError("Trying to access native object from nullptr");
                return 0.0F;
            }
            return wrIKParams_GetJointVisibilityThresh(m_nativeHandle);
        }
    }
}
